[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Albert-Y-Luppol <Albert.Y.Luppol@gmail.com>"]
readme = "README.md"
packages = [{include = "DivideAndConquer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
